--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@ body {
   font-size: 20px;
 }
 
-/* 로그창 */
+/* ===== 로그창 ===== */
 #logBox {
   white-space: pre-line;
   height: 200px;
@@ -23,7 +23,6 @@ body {
   overflow-y: auto;
   border: 1px solid #333;
   font-family: Consolas, monospace;
-  font-size: 1.0rem;
 
   width: 100% !important;
   max-width: 100% !important;
@@ -37,7 +36,7 @@ body {
   max-width: 100% !important;
 }
 
-/* 정보 카드 */
+/* ===== 타일 카드 ===== */
 .info-card {
   background: #1e293b;
   border: 1px solid #334155;
@@ -55,19 +54,19 @@ body {
 }
 
 .info-icon {
-  font-size: 3rem;
+  font-size: 3.2rem;
 }
 
 .info-title {
-  font-size: 1.6rem;
+  font-size: 1.7rem;
   font-weight: 700;
 }
 .info-value {
-  font-size: 2.3rem;
+  font-size: 2.4rem;
   font-weight: 900;
 }
 
-/* LED 상태 표시 */
+/* ===== LED 상태 표시 ===== */
 .led-on, .led-off {
   display: inline-block;
   padding: 6px 22px;
@@ -79,11 +78,11 @@ body {
 .led-on { background: #22c55e; }
 .led-off { background: #ef4444; }
 
-/* 버튼 */
+/* ===== 버튼 ===== */
 .action-btn {
-  padding: 16px 26px;
-  border-radius: 14px;
-  font-size: 1.8rem;
+  padding: 18px 30px;
+  border-radius: 16px;
+  font-size: 2rem;
   font-weight: 900;
   text-align: center;
   width: 100%;
@@ -95,28 +94,28 @@ body {
 /* ===== 모바일 최적화 ===== */
 @media (max-width: 480px) {
 
-  /* 타이틀 폰트 한단계 확대 */
-  .title-text {
-    font-size: 3.6rem !important;
-  }
+  /* 타이틀 두 단계 커짐 */
+  .title-text { font-size: 4.2rem !important; }
 
+  /* 타일 2×2 균형 */
   .grid-cards {
     grid-template-columns: 1fr 1fr !important;
-    gap: 12px !important;
+    gap: 14px !important;
     width: 100%;
   }
 
+  /* 타일 폭 자동 조절 */
   .info-card {
     max-width: 100% !important;
   }
 
-  .info-title { font-size: 1.8rem; }
-  .info-value { font-size: 2.4rem; }
-  .info-icon { font-size: 3.4rem; }
+  .info-title { font-size: 1.9rem; }
+  .info-value { font-size: 2.55rem; }
+  .info-icon { font-size: 3.6rem; }
 
-  /* 버튼 간 간격 더 넓힘 */
+  /* 버튼 간격 더 넓힘 */
   .button-row {
-    gap: 26px !important;
+    gap: 32px !important;
   }
 }
 </style>
@@ -126,13 +125,13 @@ body {
 
 <div class="w-full mx-auto py-4 px-4">
 
-  <!-- 타이틀 (폰트 한 단계 더 크게) -->
-  <h1 class="text-4xl title-text font-extrabold mb-6 text-center">
+  <!-- ===== 제목 (두 단계 확대됨) ===== -->
+  <h1 class="text-6xl title-text font-extrabold mb-8 text-center">
     ESP32 MQTT Dashboard
   </h1>
 
-  <!-- 4개 타일 -->
-  <div class="grid grid-cols-2 gap-4 mb-4 place-items-center grid-cards">
+  <!-- ===== 타일 4개 ===== -->
+  <div class="grid grid-cols-2 gap-6 mb-6 place-items-center grid-cards">
 
     <div class="info-card">
       <div class="info-icon">📶</div>
@@ -168,8 +167,8 @@ body {
 
   </div>
 
-  <!-- 버튼 간격 확대 -->
-  <div class="flex justify-center button-row gap-8 my-6">
+  <!-- ===== 버튼 ===== -->
+  <div class="flex justify-center button-row gap-10 my-6">
 
     <button onclick="sendLED(1)"
       class="action-btn bg-green-600 active:scale-95 transition">
@@ -188,7 +187,7 @@ body {
 
   </div>
 
-  <!-- 로그 -->
+  <!-- ===== 로그 ===== -->
   <div id="logBox">[LOG] Ready…</div>
   <div id="timeBox">--:--:--</div>
 
@@ -216,7 +215,6 @@ client.on("message", (topic, payload) => {
 
   if (topic === "/esp32/status") {
     let j = JSON.parse(msg);
-
     ssid.innerText = j.ssid;
     rssi.innerText = j.rssi + " dBm";
     ip.innerText = j.ip;
