--- a/test.html
+++ b/test.html
@@ -13,6 +13,26 @@ body {
   font-size: 20px;
 }
 
+/* ===== 애니메이션 ===== */
+.fade-in {
+  animation: fadein 0.7s ease-out;
+}
+@keyframes fadein {
+  from { opacity: 0; transform: translateY(10px); }
+  to   { opacity: 1; transform: translateY(0); }
+}
+
+/* ===== MQTT 연결 LED ===== */
+.status-led {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+.led-connected   { background: #22c55e; }
+.led-disconnected { background: #ef4444; }
+
 /* ===== 로그창 ===== */
 #logBox {
   white-space: pre-line;
@@ -33,7 +53,6 @@ body {
   font-size: 1rem;
   margin-top: 6px;
   width: 100% !important;
-  max-width: 100% !important;
 }
 
 /* ===== 타일 카드 ===== */
@@ -45,12 +64,21 @@ body {
   display: flex;
   gap: 14px;
   align-items: center;
-
   width: 100%;
-  height: 120px; 
+  height: 120px;
   max-width: 500px;
   margin-left: auto;
   margin-right: auto;
+
+  /* 그림자 추가 */
+  box-shadow: 0 6px 14px rgba(0,0,0,0.35);
+
+  /* hover 효과 */
+  transition: transform 0.18s ease, background 0.18s ease;
+}
+.info-card:hover {
+  transform: scale(1.03);
+  background: #243349;
 }
 
 .info-icon {
@@ -66,7 +94,7 @@ body {
   font-weight: 900;
 }
 
-/* ===== LED 상태 표시 ===== */
+/* ===== LED 표시 ===== */
 .led-on, .led-off {
   display: inline-block;
   padding: 6px 22px;
@@ -89,49 +117,50 @@ body {
   max-width: 180px;
   color: #fff;
   box-shadow: 0 4px 12px rgba(0,0,0,0.25);
+
+  transition: transform 0.15s ease;
+}
+.action-btn:active {
+  transform: scale(0.95);
 }
 
 /* ===== 모바일 최적화 ===== */
 @media (max-width: 480px) {
 
-  /* 타이틀 두 단계 커짐 */
-  .title-text { font-size: 4.2rem !important; }
+  /* 제목 한 단계 줄임 */
+  .title-text { font-size: 3.8rem !important; }
 
-  /* 타일 2×2 균형 */
+  /* 타일 간 거리 */
   .grid-cards {
     grid-template-columns: 1fr 1fr !important;
     gap: 14px !important;
-    width: 100%;
   }
 
-  /* 타일 폭 자동 조절 */
-  .info-card {
-    max-width: 100% !important;
-  }
-
-  .info-title { font-size: 1.9rem; }
-  .info-value { font-size: 2.55rem; }
-  .info-icon { font-size: 3.6rem; }
-
-  /* 버튼 간격 더 넓힘 */
+  /* 버튼 간 거리 더 넓힘 */
   .button-row {
-    gap: 32px !important;
+    gap: 36px !important;
   }
 }
 </style>
 </head>
 
-<body class="bg-slate-900 text-slate-100">
+<body class="bg-slate-900 text-slate-100 fade-in">
 
 <div class="w-full mx-auto py-4 px-4">
 
-  <!-- ===== 제목 (두 단계 확대됨) ===== -->
-  <h1 class="text-6xl title-text font-extrabold mb-8 text-center">
+  <!-- ===== 제목 (한 단계 줄임) ===== -->
+  <h1 class="text-5xl title-text font-extrabold mb-4 text-center fade-in">
     ESP32 MQTT Dashboard
   </h1>
 
+  <!-- ===== MQTT 연결 LED ===== -->
+  <div class="text-center mb-6 fade-in">
+      <span id="mqttLed" class="status-led led-disconnected"></span>
+      <span id="mqttStatusText" class="text-xl">MQTT Disconnected</span>
+  </div>
+
   <!-- ===== 타일 4개 ===== -->
-  <div class="grid grid-cols-2 gap-6 mb-6 place-items-center grid-cards">
+  <div class="grid grid-cols-2 gap-6 mb-6 place-items-center grid-cards fade-in">
 
     <div class="info-card">
       <div class="info-icon">📶</div>
@@ -168,35 +197,49 @@ body {
   </div>
 
   <!-- ===== 버튼 ===== -->
-  <div class="flex justify-center button-row gap-10 my-6">
+  <div class="flex justify-center button-row gap-12 my-6 fade-in">
 
     <button onclick="sendLED(1)"
-      class="action-btn bg-green-600 active:scale-95 transition">
+      class="action-btn bg-green-600">
       ON
     </button>
 
     <button onclick="sendLED(0)"
-      class="action-btn bg-yellow-500 active:scale-95 transition">
+      class="action-btn bg-yellow-500">
       OFF
     </button>
 
     <button onclick="sendReset()"
-      class="action-btn bg-red-600 active:scale-95 transition">
+      class="action-btn bg-red-600">
       RESET
     </button>
 
   </div>
 
   <!-- ===== 로그 ===== -->
-  <div id="logBox">[LOG] Ready…</div>
+  <div id="logBox" class="fade-in">[LOG] Ready…</div>
   <div id="timeBox">--:--:--</div>
 
 </div>
 
 <script>
+/* MQTT 연결 */
 let client = mqtt.connect("wss://broker.hivemq.com:8884/mqtt", {
   clientId: "espui_" + Math.random().toString(16).substr(2, 8)
 });
+
+function setMQTTStatus(connected) {
+  const led = document.getElementById("mqttLed");
+  const txt = document.getElementById("mqttStatusText");
+
+  if (connected) {
+    led.className = "status-led led-connected";
+    txt.innerText = "MQTT Connected";
+  } else {
+    led.className = "status-led led-disconnected";
+    txt.innerText = "MQTT Disconnected";
+  }
+}
 
 function log(msg) {
   const box = document.getElementById("logBox");
@@ -205,9 +248,15 @@ function log(msg) {
 }
 
 client.on("connect", () => {
+  setMQTTStatus(true);
   log("[MQTT] Connected");
   client.subscribe("/esp32/status");
   client.subscribe("/esp32/log");
+});
+
+client.on("close", () => {
+  setMQTTStatus(false);
+  log("[MQTT] Disconnected");
 });
 
 client.on("message", (topic, payload) => {
@@ -218,26 +267,25 @@ client.on("message", (topic, payload) => {
     ssid.innerText = j.ssid;
     rssi.innerText = j.rssi + " dBm";
     ip.innerText = j.ip;
-
     ledState.innerHTML =
       j.led == 1 ? "<span class='led-on'>ON</span>" : "<span class='led-off'>OFF</span>";
-
     log("[STATUS] " + msg);
   }
 
   if (topic === "/esp32/log") log("[ESP] " + msg);
 });
 
+/* 버튼 명령 */
 function sendLED(v) {
   client.publish("/esp32/cmd/led", String(v));
   log("[CMD] LED=" + v);
 }
-
 function sendReset() {
   client.publish("/esp32/cmd/reset", "1");
   log("[CMD] RESET");
 }
 
+/* 시계 */
 setInterval(() => {
   timeBox.innerText = new Date().toLocaleString("ko-KR", { hour12: false });
 }, 1000);
