--- a/test.html
+++ b/test.html
@@ -28,15 +28,15 @@ body {
   width: 18px;
   height: 18px;
   border-radius: 50%;
-  margin-right: 8px;
+  margin-right: 6px;
 }
 .led-connected   { background: #22c55e; }
 .led-disconnected { background: #ef4444; }
 
-/* ===== 로그창 ===== */
+/* ===== 로그 ===== */
 #logBox {
   white-space: pre-line;
-  height: 200px;
+  height: 220px;
   background: #000;
   color: #0f0;
   padding: 12px;
@@ -45,7 +45,6 @@ body {
   font-family: Consolas, monospace;
 
   width: 100% !important;
-  max-width: 100% !important;
 }
 #timeBox {
   text-align: right;
@@ -59,30 +58,30 @@ body {
 .info-card {
   background: #1e293b;
   border: 1px solid #334155;
-  border-radius: 14px;
+  border-radius: 16px;
   padding: 20px;
   display: flex;
-  gap: 14px;
+  gap: 16px;
   align-items: center;
   width: 100%;
-  height: 120px;
+  height: 130px;
   max-width: 500px;
   margin-left: auto;
   margin-right: auto;
 
-  /* 그림자 추가 */
-  box-shadow: 0 6px 14px rgba(0,0,0,0.35);
+  /* 그림자 */
+  box-shadow: 0 6px 18px rgba(0,0,0,0.35);
 
   /* hover 효과 */
-  transition: transform 0.18s ease, background 0.18s ease;
+  transition: transform 0.20s ease, background 0.20s ease;
 }
 .info-card:hover {
-  transform: scale(1.03);
-  background: #243349;
+  transform: scale(1.04);
+  background: #2b3f52;
 }
 
 .info-icon {
-  font-size: 3.2rem;
+  font-size: 3.3rem;
 }
 
 .info-title {
@@ -90,25 +89,13 @@ body {
   font-weight: 700;
 }
 .info-value {
-  font-size: 2.4rem;
+  font-size: 2.5rem;
   font-weight: 900;
 }
-
-/* ===== LED 표시 ===== */
-.led-on, .led-off {
-  display: inline-block;
-  padding: 6px 22px;
-  border-radius: 12px;
-  font-size: 1.8rem;
-  font-weight: 900;
-  color: white;
-}
-.led-on { background: #22c55e; }
-.led-off { background: #ef4444; }
 
 /* ===== 버튼 ===== */
 .action-btn {
-  padding: 18px 30px;
+  padding: 18px 28px;
   border-radius: 16px;
   font-size: 2rem;
   font-weight: 900;
@@ -116,29 +103,38 @@ body {
   width: 100%;
   max-width: 180px;
   color: #fff;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-
+  box-shadow: 0 4px 14px rgba(0,0,0,0.25);
   transition: transform 0.15s ease;
 }
 .action-btn:active {
-  transform: scale(0.95);
+  transform: scale(0.92);
 }
 
 /* ===== 모바일 최적화 ===== */
 @media (max-width: 480px) {
 
-  /* 제목 한 단계 줄임 */
-  .title-text { font-size: 3.8rem !important; }
+  /* 제목 조정 */
+  .title-text { font-size: 3.5rem !important; }
 
-  /* 타일 간 거리 */
+  /* 타일 2×2 균형 */
   .grid-cards {
     grid-template-columns: 1fr 1fr !important;
-    gap: 14px !important;
+    gap: 16px !important;
   }
 
-  /* 버튼 간 거리 더 넓힘 */
+  /* 타일 및 내용 확대 */
+  .info-card {
+    max-width: 100%;
+    height: 140px;
+  }
+
+  .info-title { font-size: 1.9rem; }
+  .info-value { font-size: 2.6rem; }
+  .info-icon { font-size: 3.7rem; }
+
+  /* 버튼 간격 */
   .button-row {
-    gap: 36px !important;
+    gap: 40px !important;
   }
 }
 </style>
@@ -148,15 +144,25 @@ body {
 
 <div class="w-full mx-auto py-4 px-4">
 
-  <!-- ===== 제목 (한 단계 줄임) ===== -->
+  <!-- ===== 제목 ===== -->
   <h1 class="text-5xl title-text font-extrabold mb-4 text-center fade-in">
     ESP32 MQTT Dashboard
   </h1>
 
-  <!-- ===== MQTT 연결 LED ===== -->
-  <div class="text-center mb-6 fade-in">
-      <span id="mqttLed" class="status-led led-disconnected"></span>
-      <span id="mqttStatusText" class="text-xl">MQTT Disconnected</span>
+  <!-- ===== MQTT + 장비 상태 ===== -->
+  <div class="text-center mb-6 fade-in flex justify-center gap-6">
+
+      <!-- MQTT 상태 -->
+      <div>
+          <span id="mqttLed" class="status-led led-disconnected"></span>
+          <span id="mqttStatusText" class="text-xl">MQTT Disconnected</span>
+      </div>
+
+      <!-- 장비 상태 -->
+      <div>
+          <span id="deviceLed" class="status-led led-disconnected"></span>
+          <span id="deviceStatus" class="text-xl">OFF LINE</span>
+      </div>
   </div>
 
   <!-- ===== 타일 4개 ===== -->
@@ -197,7 +203,7 @@ body {
   </div>
 
   <!-- ===== 버튼 ===== -->
-  <div class="flex justify-center button-row gap-12 my-6 fade-in">
+  <div class="flex justify-center button-row gap-14 my-6 fade-in">
 
     <button onclick="sendLED(1)"
       class="action-btn bg-green-600">
@@ -223,7 +229,8 @@ body {
 </div>
 
 <script>
-/* MQTT 연결 */
+
+/* ================== MQTT 연결 ================== */
 let client = mqtt.connect("wss://broker.hivemq.com:8884/mqtt", {
   clientId: "espui_" + Math.random().toString(16).substr(2, 8)
 });
@@ -241,6 +248,19 @@ function setMQTTStatus(connected) {
   }
 }
 
+function setDeviceStatus(connected) {
+  const led = document.getElementById("deviceLed");
+  const txt = document.getElementById("deviceStatus");
+
+  if (connected) {
+    led.className = "status-led led-connected";
+    txt.innerText = "ON LINE";
+  } else {
+    led.className = "status-led led-disconnected";
+    txt.innerText = "OFF LINE";
+  }
+}
+
 function log(msg) {
   const box = document.getElementById("logBox");
   box.textContent += "\n" + msg;
@@ -249,6 +269,7 @@ function log(msg) {
 
 client.on("connect", () => {
   setMQTTStatus(true);
+  setDeviceStatus(true);
   log("[MQTT] Connected");
   client.subscribe("/esp32/status");
   client.subscribe("/esp32/log");
@@ -256,39 +277,46 @@ client.on("connect", () => {
 
 client.on("close", () => {
   setMQTTStatus(false);
+  setDeviceStatus(false);
   log("[MQTT] Disconnected");
 });
 
+/* ================== MQTT 메시지 ================== */
 client.on("message", (topic, payload) => {
   const msg = payload.toString();
 
   if (topic === "/esp32/status") {
     let j = JSON.parse(msg);
+
     ssid.innerText = j.ssid;
     rssi.innerText = j.rssi + " dBm";
     ip.innerText = j.ip;
+
     ledState.innerHTML =
       j.led == 1 ? "<span class='led-on'>ON</span>" : "<span class='led-off'>OFF</span>";
+
     log("[STATUS] " + msg);
   }
 
   if (topic === "/esp32/log") log("[ESP] " + msg);
 });
 
-/* 버튼 명령 */
+/* ================== 버튼 제어 ================== */
 function sendLED(v) {
   client.publish("/esp32/cmd/led", String(v));
   log("[CMD] LED=" + v);
 }
+
 function sendReset() {
   client.publish("/esp32/cmd/reset", "1");
   log("[CMD] RESET");
 }
 
-/* 시계 */
+/* ================== 시계 ================== */
 setInterval(() => {
   timeBox.innerText = new Date().toLocaleString("ko-KR", { hour12: false });
 }, 1000);
+
 </script>
 
 </body>
